client/css/bez-para.css
/* Global Styles */

html,
body {
  height: 100%;
  width: 100%;
}

.vert-text {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}

.vert-text h1 {
  padding: 0;
  margin: 0;
  font-size: 4.5em;
  font-weight: 700;
}

/* Full Page Image Header Area */

.header {
  display: table;
  height: 100%;
  width: 100%;
  position: relative;
  background: url(../img/bg.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

/* Call to Action */

.call-to-action {
  color: #ffffff;
  background: #0a5175;
  padding: 50px 0;
}

/* Footer */

footer {
  padding: 100px 0;
}

.top-scroll {
  margin-top: 50px;
}

.top-scroll a {
  text-decoration: none;
  color: inherit;
}

i.scroll {
  color: #333333;
}

i.scroll:hover {
  color: #0a5175;
}

/* Responsive */

@media (max-width: 768px) {
	
  .header {
	background: url(../img/bg.jpg) no-repeat center center scroll; 
  }
  
}

/* Other */

.bez-para-header {
    color: #0a5175;
}

.bez-para-poklon {
    margin: 10px auto;
}

.bez-para-menu {
    top: 5px;
    right: 5px;
    position: fixed;
    z-index: 1;
}

.bez-para-logo {
    top: 5px;
    left: 5px;
    position: fixed;
    z-index: 1;
}

.bez-para-container {
    background-color: rgba(40, 94, 142, 0.3);
    padding: 20px 0;
}

.bez-para-filter {
    margin-top: 40px;
    border-bottom: none;
}

.bez-para-filter li:not(.active) a:not(:hover) {
    border: 1px solid #eeeeee;
    color: white;
}

.bez-para-pokloni {
    text-align: left;
    color: #0a5175
}
.bez-para-pokloni .list-group-item:first-child {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.bez-para-pokloni .badge a {
    color: #ffffff;
}

.bez-para-more {
    margin-top: 100px;
}

